Add implementation for Id in the InsertOneResult and UpdateResult classes, as well as create a DeleteResult with DeletedOn field. Add collectionSuffix to MongoDbContext as this can be configured outside of any code. Also add an exception handling mechanism where necessary.

--- a/trainingProject.be/trainingProjectAPI/trainingProjectAPI/appsettings.json
+++ b/trainingProject.be/trainingProjectAPI/trainingProjectAPI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDbSettings": {
+    "DatabaseName": "TripManager",
+    "ConnectionString": "mongodb://localhost:27017",
+    "IdLenght": 36,
+    "CollectionSuffix": "Collection"
+  }
 }
