--- a/trainingProject.be/trainingProjectAPI/trainingProjectAPI/trainingProjectAPI.csproj
+++ b/trainingProject.be/trainingProjectAPI/trainingProjectAPI/trainingProjectAPI.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8"/>
         <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
         <PackageReference Include="MongoDB.Driver.GridFS" Version="2.30.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
     </ItemGroup>
 
 </Project>
