--- a/trainingProject.be/trainingProjectAPI/trainingProjectAPI/trainingProjectAPI.csproj
+++ b/trainingProject.be/trainingProjectAPI/trainingProjectAPI/trainingProjectAPI.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
         <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
         <PackageReference Include="MongoDB.Driver.GridFS" Version="2.30.0" />
