Matheo schon gemacht

--- a/trainingProject.be/trainingProjectAPI/trainingProjectAPI/appsettings.json
+++ b/trainingProject.be/trainingProjectAPI/trainingProjectAPI/appsettings.json
@@ -11,5 +11,8 @@
     "ConnectionString": "mongodb://localhost:27017",
     "IdLenght": 36,
     "CollectionSuffix": "Collection"
+  },
+  "ReactSettings": {
+    
   }
 }
