Refactor email service and authentication logic: implement email settings configuration, enhance password reset email functionality, and improve JWT token handling

--- a/trainingProject.be/trainingProjectAPI/trainingProjectAPI/appsettings.json
+++ b/trainingProject.be/trainingProjectAPI/trainingProjectAPI/appsettings.json
@@ -14,5 +14,13 @@
   },
   "ReactSettings": {
     
+  },
+  "EmailSettings": {
+    "SmtpServer": "mail.gmx.net",
+    "SmtpPort": 465,
+    "AppPassword": "SHI5YZ5ZSA7QFJYVIAVQ",
+    "SenderName": "Trip Manager",
+    "SenderEmail": "tom.agent@gmx.de",
+    "ResetPasswordUrl": "http://localhost:5173/resetPassword?token="
   }
 }
