Refactor authentication and configuration logic: add JWT settings to appsettings, improve token handling in AuthService, and enhance error handling in EmailService

--- a/trainingProject.be/trainingProjectAPI/trainingProjectAPI/appsettings.json
+++ b/trainingProject.be/trainingProjectAPI/trainingProjectAPI/appsettings.json
@@ -13,7 +13,6 @@
     "CollectionSuffix": "Collection"
   },
   "ReactSettings": {
-    
   },
   "EmailSettings": {
     "SmtpServer": "mail.gmx.net",
@@ -22,5 +21,8 @@
     "SenderName": "Trip Manager",
     "SenderEmail": "tom.agent@gmx.de",
     "ResetPasswordUrl": "http://localhost:5173/resetPassword?token="
+  },
+  "JwtSettings": {
+    "SecretKey": "YourSuperSecretKeyForJwtTokenGeneration"
   }
 }
