--- a/trainingProject.be/trainingProjectAPI/trainingProjectAPI/trainingProjectAPI.csproj
+++ b/trainingProject.be/trainingProjectAPI/trainingProjectAPI/trainingProjectAPI.csproj
@@ -18,4 +18,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\ResultObjects\" />
+    </ItemGroup>
+
 </Project>
