--- a/trainingProject.be/trainingProjectAPI/trainingProjectAPI/trainingProjectAPI.csproj
+++ b/trainingProject.be/trainingProjectAPI/trainingProjectAPI/trainingProjectAPI.csproj
@@ -22,4 +22,10 @@
       <Folder Include="Models\ResultObjects\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Update="Mapper\UserProfile.cs">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Compile>
+    </ItemGroup>
+
 </Project>
