--- a/trainingProject.be/trainingProjectAPI/trainingProjectAPI/trainingProjectAPI.csproj
+++ b/trainingProject.be/trainingProjectAPI/trainingProjectAPI/trainingProjectAPI.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Microsoft.ML" Version="5.0.0-preview.25527.5" />
         <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
         <PackageReference Include="MongoDB.Driver.GridFS" Version="2.30.0" />
+        <PackageReference Include="MongoDBMigrations" Version="2.2.0" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.5" />
     </ItemGroup>
